@@ -1,3 +1,7 @@
+2004-01-30 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* support/regression/tests/libmullong.c: fixed for 64 bit hosts
+
 2004-01-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/mcs51/ralloc.c (getRegPtr, getRegGpr),
